# InheritanceClass

./: BakedGood.cpp  BakedGood.h  Bread.cpp  Bread.h  CMakeLists.txt  Cake.cpp  Cake.h  CupCake.cpp  CupCake.h  LayerCake.cpp  LayerCake.h  main.cpp
