cmake_minimum_required(VERSION 3.20)
project(Lab9___Inheritance)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab9___Inheritance main.cpp
        main.cpp
        BakedGood.cpp
        BakedGood.h
        Bread.cpp
        Bread.h
        Cake.cpp
        Cake.h
        CupCake.cpp
        CupCake.h
        LayerCake.cpp
        LayerCake.h)
